<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TTFO</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_user">Hello, Eshaan! :)</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="fbLogin">FB Login</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="attempts">Attempts Left:</string>

    <string name="helptext_user">Username</string>
    <string name="helptext_pw">Password</string>
    <string name="helptext_email">Email</string>

    <string name="group_create">Create Group</string>
    <string name="group_join">Join Group</string>

    <string name="walkwithme_title">Walk With Me</string>
    <string name="socialmeet_title">Meet Up</string>
    <string name="text_required_field">Required field</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>


<string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>

</resources>
