<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/backrepeat_smallsteps">

    <TextView
        android:text="@string/hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:typeface="sans"
        android:textColor="#ff333333"
        android:textIsSelectable="false"/>

    <TextView
        android:text="It's good to see you again, what are you planning to do today?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="24sp"
        android:typeface="sans"
        android:textColor="#ff333333"
        android:textIsSelectable="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="108dp"
        android:text="@string/walkwithme_title"
        android:id="@+id/button_walkWithMe"
        android:textSize="36sp"
        android:textColor="@drawable/pressed_text_green"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_button_green"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="108dp"
        android:text="@string/socialmeet_title"
        android:id="@+id/button_meeting"
        android:textSize="36sp"
        android:textColor="@drawable/pressed_text_orange"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button_orange"/>

</LinearLayout>
